# ExampleApp.Chat/server/Data/MyDbContext.cs
@@ -10,8 +10,20 @@ public class MyDbContext : SseDbContext
     {
     }
 
+
     public DbSet<Room> Rooms { get; set; }
     public DbSet<Message> Messages { get; set; }
     public DbSet<User> Users { get; set; }
     public DbSet<UserRoom> UserRooms { get; set; }
+
+    protected override void OnModelCreating(ModelBuilder builder)
+    {
+        base.OnModelCreating(builder);
+
+        builder.Entity<User>()
+            .HasMany(u => u.Connections)
+            .WithOne()
+            .HasForeignKey(c => c.UserId)
+            .OnDelete(DeleteBehavior.Cascade);
+    }
 }
